backend/infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fracarc-gateway
spec:
  selector:
    app: fracarc
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: fracarc-frontend
spec:
  selector:
    app: fracarc
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
