backend/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fracarc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: fracarc.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: fracarc-gateway
                port:
                  number: 3001
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: fracarc-frontend
                port:
                  number: 3000
